istio/userapi-python.yml
# ******************
#   API Service
#*******************
apiVersion: v1
kind: Service
metadata:
  name: userapi-api
  labels:
    app: userapi-api
    service: userapi-api
spec:
  ports:
  - port: 3000
    targetPort: 8000
  selector:
    app: userapi-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapi-api-v1
  labels:
    app: userapi-api
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userapi-api
      version: v1
  template:
    metadata:
      labels:
        app: userapi-api
        version: v1
    spec:
      serviceAccountName: acc-userapi-api
      containers:
        - name: fastapi
          image: mralbertk/dsti-devops-fastapi:v1
          ports:
            - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapi-api-v2
  labels:
    app: userapi-api
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userapi-api
      version: v2
  template:
    metadata:
      labels:
        app: userapi-api
        version: v2
    spec:
      serviceAccountName: acc-userapi-api
      containers:
        - name: fastapi
          image: mralbertk/dsti-devops-fastapi:v2
          ports:
            - containerPort: 8000
---
# ******************
#     DB Service
#*******************
apiVersion: v1
kind: Service
metadata:
  name: userapi-db
  labels:
    app: userapi-db
    service: userapi-db
spec:
  ports:
  - port: 6379
  selector:
    app: userapi-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapi-redis
  labels:
    app:
      userapi-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userapi-db
  template:
    metadata:
      labels:
        app: userapi-db
    spec:
      serviceAccountName: acc-userapi-db
      volumes:
        - name: userapi-redis-volume
          persistentVolumeClaim:
            claimName: redis-pv-claim
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: "/etc/redis/database/"
              name: userapi-redis-volume
