istio/userapi-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: userapi-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: userapi-destination
spec:
  host: userapi-api.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: userapi-db
spec:
  host: userapi-db.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: userapi-api-vs
spec:
  hosts:
  - userapi-api
  gateways:
  - userapi-gateway
  http:
  - name: "userapi-route"
    route:
    - destination:
        host: userapi-api.default.svc.cluster.local
        subset: v1
        port:
          number: 3000
      weight: 25
    - destination:
        host: userapi-api.default.svc.cluster.local
        subset: v2
        port:
          number: 3000
      weight: 75
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: userapi-db-vs
spec:
  hosts:
  - userapi-db
  http:
  - route:
    - destination:
        host: userapi-db
